--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -315,6 +315,19 @@ input[type=submit] {
     
   }
 
+    footer {
+position:fixed;
+   left:0px;
+   bottom:0px;
+   height:10px;
+   width:100%;
+  font-size: 10px;
+  text-align: center;
+  padding:10px;
+    border-top: 4px solid #4aaaa5;
+
+ }
+
   @media only screen and (max-width: 640px) {
   .container {
     padding: 0 20px;
@@ -348,3 +361,16 @@ input[type=submit] {
     padding-left: 0;
     
   }
+
+  footer {
+position:fixed;
+   left:0px;
+   bottom:0px;
+   height:10px;
+   width:100%;
+  font-size: 10px;
+  text-align: center;
+vertical-align: bottom;
+  padding:10px;
+    border-top: 4px solid #4aaaa5;
+ }
